applications/scratch-2042945/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch-2042945
  namespace: scratch

spec:
  selector:
    app: scratch-2042945

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
