applications/scratch-2042945/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: scratch-2042945
  namespace: scratch

spec:
  ingressClassName: traefik

  rules:
  - host: scratch-2042945.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: scratch-2042945

            port:
              number: 80
